--- a/src/Themes/Lasergroup/App_Data/Localization/it-IT/orchard.theme.po
+++ b/src/Themes/Lasergroup/App_Data/Localization/it-IT/orchard.theme.po
@@ -1,5 +1,5 @@
 # Orchard resource strings - it-IT
-# Copyright (c) 2018 Laser s.r.l.
+# Copyright (c) 2019 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -345,6 +345,10 @@ msgid "Add attachment"
 msgstr "Aggiungi allegato"
 
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
+msgid "By clicking \"SEND\" I declare that I have read and understood "
+msgstr "Cliccando su "Invia" dichiaro di avere letto e compreso"
+
+msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
 msgid "Comments or Inquiry"
 msgstr "Commenti o richieste"
 
@@ -391,6 +395,10 @@ msgstr "Email ed email di conferma non corrispondono"
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
 msgid "The field is required."
 msgstr "Campo obbligatorio"
+
+msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
+msgid "the privacy policy."
+msgstr "l'informativa sulla privacy."
 
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
 msgid "Upload file"
