fix traduzioni per tipologia dei cookie

--- a/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
@@ -136,3 +136,19 @@ msgctxt "Laser.Orchard.Cookies.Handlers.CookieSettingsPartHandler"
 msgid "Cookies"
 msgstr "Cookies"
 
+msgctxt "Laser.Orchard.Cookies.Services.GDPRScript"
+msgid "Marketing"
+msgstr "Marketing"
+
+msgctxt "Laser.Orchard.Cookies.Services.GDPRScript"
+msgid "Preferences"
+msgstr "Preferenze"
+
+msgctxt "Laser.Orchard.Cookies.Services.GDPRScript"
+msgid "Statistical"
+msgstr "Statistici"
+
+msgctxt "Laser.Orchard.Cookies.Services.GDPRScript"
+msgid "Technical"
+msgstr "Tecnici"
+
